--- a/package.json
+++ b/package.json
@@ -9,14 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.3",
     "@react-oauth/google": "^0.12.1",
-    "framer-motion": "^12.0.6",
+    "axios": "^1.7.9",
+    "fabric": "^6.5.4",
+    "framer-motion": "^12.4.1",
+    "html2canvas": "^1.4.1",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "lottie-react": "^2.4.1",
+    "mongoose": "^8.10.0",
     "next": "15.1.6",
     "next-themes": "^0.2.1",
+    "nookies": "^2.5.2",
+    "qrcode.react": "^4.2.0",
     "react": "19.0.0",
+    "react-color": "^2.19.3",
     "react-dom": "19.0.0",
     "react-hot-toast": "^2.4.1",
+    "react-qr-code": "^2.0.15",
+    "react-qrcode-logo": "^3.0.0",
     "swiper": "^9.3.2"
   },
   "devDependencies": {
