--- a/package.json
+++ b/package.json
@@ -12,27 +12,42 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.3",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
+    "dom-to-image": "^2.6.0",
+    "dom-to-svg": "^0.12.2",
     "fabric": "^6.5.4",
     "framer-motion": "^12.4.1",
     "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "jszip": "^3.10.1",
     "jwt-decode": "^4.0.0",
     "lottie-react": "^2.4.1",
+    "lucide-react": "^0.475.0",
     "mongoose": "^8.10.0",
     "next": "15.1.6",
     "next-themes": "^0.2.1",
     "nookies": "^2.5.2",
+    "qr-code-styling": "^1.9.1",
     "qrcode.react": "^4.2.0",
+    "razorpay": "^2.9.5",
     "react": "19.0.0",
     "react-color": "^2.19.3",
     "react-dom": "19.0.0",
     "react-hot-toast": "^2.4.1",
     "react-qr-code": "^2.0.15",
     "react-qrcode-logo": "^3.0.0",
-    "swiper": "^9.3.2"
+    "swiper": "^9.3.2",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.1",
